--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "whatsapp-dp-downloader",
   "version": "1.0.0",
-  "scripts": {
-    "dev": "vercel dev",
-    "start": "vercel dev"
-  },
+  "type": "module",
   "dependencies": {
-    "axios": "^1.4.0",
-    "cheerio": "^1.0.0-rc.12"
+    "cheerio": "^1.0.0-rc.12",
+    "node-fetch": "^3.3.2"
+  },
+  "scripts": {
+    "dev": "vercel dev"
   }
 }
