--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
-  "name": "whatsapp-dp-downloader",
+  "name": "whatsapp-dp-download",
   "version": "1.0.0",
   "type": "module",
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
     "node-fetch": "^3.3.2"
-  },
-  "scripts": {
-    "dev": "vercel dev"
   }
 }
