--- a/package.json
+++ b/package.json
@@ -1,15 +1,8 @@
 {
-  "name": "tiktok-downloader-api",
+  "name": "tiktok-api",
   "version": "1.0.0",
-  "description": "TikTok Video Downloader API without watermark",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
+  "main": "api/scrape.js",
   "dependencies": {
-    "axios": "^1.4.0",
-    "cheerio": "^1.0.0-rc.12",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "axios": "^1.6.0"
   }
 }
