--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "tiktok-api",
+  "name": "fdown-scraper-api",
   "version": "1.0.0",
-  "description": "TikTok video downloader API hosted on Vercel",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "node-fetch": "^3.4.1"
+    "axios": "^1.6.7",
+    "cheerio": "^1.0.0-rc.12",
+    "express": "^4.18.4"
   }
 }
