--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "fdown-scraper-api",
+  "name": "fbdown-api",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "vercel dev"
   },
   "dependencies": {
-    "axios": "^1.6.7",
     "cheerio": "^1.0.0-rc.12",
-    "express": "^4.18.4"
+    "dotenv": "^16.3.1",
+    "node-fetch": "^2.6.12"
   }
 }
